Pridani Android mentoru

--- a/index.html
+++ b/index.html
@@ -398,12 +398,12 @@
 
 	<section class="section speakers" id="speakers">
 		<div class="container">
-			<h2 class="big">Mentoři</h2>
+			<h2 class="big">Mentoři iOS</h2>
 			<div class="speakers-carousel">
 				<div class="speakers-carousel__item">
 					<div class="row">
 						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
-							<img alt="" src="dist/img/speakers/urban.jpg">
+							<img alt="" src="dist/img/speakers/urban_petr.jpg">
 						</div>
 						<div class="speakers__wrapper col-md-15 col-lg-10">
 							<div class="speakers__content">
@@ -448,89 +448,15 @@
 				<div class="speakers-carousel__item">
 					<div class="row">
 						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
-							<img alt="" src="dist/img/speakers/zoudun.jpg">
+							<img alt="" src="dist/img/speakers/beles_miroslav.jpg">
 						</div>
 						<div class="speakers__wrapper col-md-15 col-lg-10">
 							<div class="speakers__content">
 								<h3>
-									<span class="speakers__position">iOS Developer &amp; Team Leader</span>
-									Jiří Zoudun
+									<span class="speakers__position">iOS Developer</span>
+									Miroslav Beleš
 								</h3>
-								<p>
-									Jirka se vývojem mobilních aplikací začal zabývat již při studiu na vysoké škole,
-									kde vytvořil svou <strong>první appku v rámci bakalářské práce</strong>. Touto
-									aplikací vzbudil pozornost našeho HR oddělení a protože jsme si padli do oka, tak k
-									nám zanedlouho nastoupil.
-								</p>
-								<p>
-									Postupem času se začal zabývat <strong>AR/VR a multiplatformním mobilním
-									vývojem</strong>. Jeho velkým koníčkem je navíc IoT.
-								</p>
-								<p>
-									V roce 2017 si uvědomil, že ho táhnout i softovější činnosti. Proto se přihlásil do
-									<a href="https://www.etnetera.cz/blog/prima-volba-bez-lzi-a-populismu-existuje"
-									   style="color: #ff5858"><strong>voleb na pozici team leadera</strong></a>, které
-									následně vyhrál.
-								</p>
-								<ul class="speakers__social">
-									<li><a href="https://www.instagram.com/_zoudy/" target="_blank">
-										<svg height="21px" viewBox="0 0 23.07 23.13" width="20px"
-											 xmlns="http://www.w3.org/2000/svg">
-											<defs>
-												<style>.cls-1 {
-                                                    fill: #aaa;
-                                                }</style>
-											</defs>
-											<title>Datový zdroj 1</title>
-											<g data-name="Vrstva 2" id="Vrstva_2">
-												<g data-name="Vrstva 1" id="Vrstva_1-2">
-													<path class="cls-1"
-														  d="M11.55,7.73a3.85,3.85,0,1,1-3.84,3.86h0a3.85,3.85,0,0,1,3.84-3.85m0-1.93a5.78,5.78,0,1,0,5.77,5.8h0A5.77,5.77,0,0,0,11.55,5.8Zm6.15-1.93a1.54,1.54,0,1,1-1.54,1.55h0A1.54,1.54,0,0,1,17.7,3.87h0ZM16.54,1.93a4.63,4.63,0,0,1,4.61,4.63v10a4.62,4.62,0,0,1-4.61,4.63h-10a4.62,4.62,0,0,1-4.61-4.63v-10A4.63,4.63,0,0,1,6.54,1.93h10m0-1.93h-10A6.56,6.56,0,0,0,0,6.55v10a6.56,6.56,0,0,0,6.54,6.55h10a6.56,6.56,0,0,0,6.54-6.55v-10A6.56,6.56,0,0,0,16.54,0Z"
-														  data-name="icon instagram"
-														  id="icon_instagram"/>
-												</g>
-											</g>
-										</svg>
-									</a></li>
-									<li><a href="https://www.linkedin.com/in/jirizoudun/" target="_blank">
-										<svg height="20px" viewBox="0 0 24.56 23.52" width="21px"
-											 xmlns="http://www.w3.org/2000/svg">
-											<defs>
-												<style>.cls-1 {
-                                                    fill: #aaa;
-                                                }</style>
-											</defs>
-											<title>Datový zdroj 1</title>
-											<g data-name="Vrstva 2" id="Vrstva_2">
-												<g data-name="Vrstva 1" id="Vrstva_1-2">
-													<path class="cls-1"
-														  d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"
-														  data-name="icon linkedin"
-														  id="icon_linkedin"/>
-												</g>
-											</g>
-										</svg>
-									</a></li>
-									<li><a href="https://twitter.com/JiriZoudun" target="_blank">
-										<svg height="20px" viewBox="0 0 28.1 22.61" width="22px"
-											 xmlns="http://www.w3.org/2000/svg">
-											<defs>
-												<style>.cls-1 {
-                                                    fill: #aaa;
-                                                }</style>
-											</defs>
-											<title>icon twitter</title>
-											<g data-name="Vrstva 2" id="Vrstva_2">
-												<g data-name="Vrstva 1" id="Vrstva_1-2">
-													<path class="cls-1"
-														  d="M0,20A16.43,16.43,0,0,0,8.84,22.6a16.22,16.22,0,0,0,16.41-16q0-.47,0-.95a11.65,11.65,0,0,0,2.87-3,11.51,11.51,0,0,1-3.31.9A5.73,5.73,0,0,0,27.33.42,11.7,11.7,0,0,1,23.67,1.8,5.8,5.8,0,0,0,19.46,0a5.73,5.73,0,0,0-5.62,7A16.41,16.41,0,0,1,2,1,5.68,5.68,0,0,0,3.74,8.67,5.81,5.81,0,0,1,1.13,8a5.73,5.73,0,0,0,4.62,5.67,5.83,5.83,0,0,1-2.6.1,5.76,5.76,0,0,0,5.39,4A11.69,11.69,0,0,1,0,20Z"
-														  data-name="icon twitter"
-														  id="icon_twitter"/>
-												</g>
-											</g>
-										</svg>
-									</a></li>
-								</ul>
+								<p>Míra patří mezi ty, kteří se s mobilním vývojem setkali už na střední škole. Tam se okrajově dotkl Androidu a to rozhodlo pro jeho studium Vysoké školy báňské v Ostravě, kde si zvolil obor Mobilní technologie. Po vystudování nastoupil do Etnetery už jako iOS vývojář a po dvou letech si zkusil i roli mentora, kterou si nakonec Miroslav oblíbil a zopakuje si ji i letos.</p>
 							</div>
 						</div>
 					</div>
@@ -538,43 +464,31 @@
 				<div class="speakers-carousel__item">
 					<div class="row">
 						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
-							<img alt="" src="dist/img/speakers/milos-felix.jpg">
+							<img alt="" src="dist/img/speakers/pecev_adam.jpg">
 						</div>
 						<div class="speakers__wrapper col-md-15 col-lg-10">
 							<div class="speakers__content">
 								<h3>
-									<span class="speakers__position">Mobile Division Leader</span>
-									Miloš felix
+									<span class="speakers__position">iOS Developer</span>
+									Adam Pečev
 								</h3>
-								<p>Miloš po střední škole začínal jako freelance designér a animátor ve Flashi. Za
-									vydělané peníze si pořídil Macintosh a později v roce 2007 první iPhone z USA. Svoji
-									první “Hello World!” aplikaci pro iOS naprogramoval už v roce 2008. Od té doby ale
-									nezůstal pouze u programování. Má za sebou kreativní práci v digitální agentuře a
-									letité zkušenosti s vedením lidí a projektů.</p>
-								<p>V roce 2015 jsme v Etneteře hledali technologického tahouna pro mobilní vývoj. Miloše
-									oslovila naše firemní kultura a stal se <strong>spoluzakladatelem mobilní
-										divize</strong>, kterou dnes vede.</p>
-								<ul class="speakers__social">
-									<li><a href="https://www.linkedin.com/in/milosjascur/" target="_blank">
-										<svg height="20px" viewBox="0 0 24.56 23.52" width="21px"
-											 xmlns="http://www.w3.org/2000/svg">
-											<defs>
-												<style>.cls-1 {
-                                                    fill: #aaa;
-                                                }</style>
-											</defs>
-											<title>Datový zdroj 1</title>
-											<g data-name="Vrstva 2" id="Vrstva_2">
-												<g data-name="Vrstva 1" id="Vrstva_1-2">
-													<path class="cls-1"
-														  d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"
-														  data-name="icon linkedin"
-														  id="icon_linkedin"/>
-												</g>
-											</g>
-										</svg>
-									</a></li>
-								</ul>
+								<p>Adam se přihlásil a úspěšně absolvoval první běh Mobile academy v roce 2018. Protože se mu zalíbil Swift a mobilní vývoj, přijal nabídku a hned po dokončení školy nastoupil do Etnetery jako iOS vývojář. Mobilní vývoj ale není jediná Adamova vášeň - už na výšce ho zaujaly kryptoměny, které se nakonec staly i tématem jeho diplomky. Zajímá se ale také o „softovější” části vývoje, především o UX a projektové řízení.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="speakers-carousel__item">
+					<div class="row">
+						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
+							<img alt="" src="dist/img/speakers/pecev_adam.jpg">
+						</div>
+						<div class="speakers__wrapper col-md-15 col-lg-10">
+							<div class="speakers__content">
+								<h3>
+									<span class="speakers__position">Android Developer</span>
+									Radek Bien
+								</h3>
+								<p>Radek během své kariéry vystřídal několik technologií od back-end vývoje v Javě, přes front-end v technologii Flash/Flex či klasickém html+css+javascript. Nakonec zakotvil u mobilního vývoje, kde se mu nejlépe protíná záliba v uživatelských rozhraních a softwarovém inženýrství. Kromě toho je také velký nadšenec do Kotlin multiplatform a Kotlin native.</p>
 							</div>
 						</div>
 					</div>
@@ -582,18 +496,87 @@
 			</div>
 		</div>
 		<div class="speakers-list">
-			<div class="speaker__item speaker-2">
+			<div class="speaker__item speaker-1">
 				<a href="#TODO"><span class="speakers-list__name">Petr Urban</span></a>
 			</div>
-			<div class="speaker__item speaker-4">
-				<a href="#TODO"><span class="speakers-list__name">Jiří Zoudun</span></a>
+			<div class="speaker__item speaker-2">
+				<a href="#TODO"><span class="speakers-list__name">Mirolav Beleš</span></a>
 			</div>
-			<div class="speaker__item speaker-1">
-				<a href="#TODO"><span class="speakers-list__name">Miloš Felix</span></a>
+			<div class="speaker__item speaker-3">
+				<a href="#TODO"><span class="speakers-list__name">Adam Pečev</span></a>
+			</div>
+			<div class="speaker__item speaker-4">
+				<a href="#TODO"><span class="speakers-list__name">Radek Bien</span></a>
 			</div>
 		</div>
 	</section>
 
+	<section class="section speakers-android" id="speakers-android">
+		<div class="container">
+			<h2 class="big">Mentoři Android</h2>
+			<div class="speakers-carousel-android">
+				<div class="speakers-carousel__item">
+					<div class="row">
+						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
+							<img alt="" src="dist/img/speakers/radek_bien.jpg">
+						</div>
+						<div class="speakers__wrapper col-md-15 col-lg-10">
+							<div class="speakers__content">
+								<h3>
+									<span class="speakers__position">Android Developer</span>
+									Radek Bien
+								</h3>
+								<p>Radek během své kariéry vystřídal několik technologií od back-end vývoje v Javě, přes front-end v technologii Flash/Flex či klasickém html+css+javascript. Nakonec zakotvil u mobilního vývoje, kde se mu nejlépe protíná záliba v uživatelských rozhraních a softwarovém inženýrství. Kromě toho je také velký nadšenec do Kotlin multiplatform a Kotlin native.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="speakers-carousel__item">
+					<div class="row">
+						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
+							<img alt="" src="dist/img/speakers/boris_valentovic.jpg">
+						</div>
+						<div class="speakers__wrapper col-md-15 col-lg-10">
+							<div class="speakers__content">
+								<h3>
+									<span class="speakers__position">Android Developer</span>
+									Boris Valentovič
+								</h3>
+								<p>Boris  s vývojem mobilních aplikací začal jako student na vysoké škole. Po jejím vystudování si dal od vývoje pauzu, protože dva roky strávil cestováním po Severní Americe a Novém Zélandu. Jeho vášeň se ale ani tak nedala uhasit, takže se nakonec připojil do našich řad v Etneteře a rozhodl se své zkušenosti předat dál.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="speakers-carousel__item">
+					<div class="row">
+						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
+							<img alt="" src="dist/img/speakers/oleksandr_balan.jpg">
+						</div>
+						<div class="speakers__wrapper col-md-15 col-lg-10">
+							<div class="speakers__content">
+								<h3>
+									<span class="speakers__position">Android Developer</span>
+									Oleksandr Balan
+								</h3>
+								<p>Cesta Alexe začala na Fakultě informačních technologií ČVUT, kde si zkusil programování pro iOS i pro Android. Nakonec ho učaroval Android v rámci kterého už získával pracovní zkušenosti během studia. Ostatně, Oleksandr je velký nadšenec Kotlinu a Android světa. V Etneteře se Oleksandr podílel na vývoji aplikací pro O2, Rossmann nebo ČSOB.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="speakers-list-android android">
+			<div class="speaker__item speaker-1">
+				<a href="#TODO"><span class="speakers-list__name">Radek Bien</span></a>
+			</div>
+			<div class="speaker__item speaker-2">
+				<a href="#TODO"><span class="speakers-list__name">Boris Valentovič</span></a>
+			</div>
+			<div class="speaker__item speaker-3">
+				<a href="#TODO"><span class="speakers-list__name">Oleksandr Balan</span></a>
+			</div>
+		</div>
+	</section>
     <section id="harmonogram" class="section harmonogram">
         <div class="container">
             <h2 class="center">Harmonogram</h2>
