Fixed typo in Miras name (master)

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 				<a href="#TODO"><span class="speakers-list__name">Petr Urban</span></a>
 			</div>
 			<div class="speaker__item speaker-2">
-				<a href="#TODO"><span class="speakers-list__name">Mirolav Beleš</span></a>
+				<a href="#TODO"><span class="speakers-list__name">Miroslav Beleš</span></a>
 			</div>
 			<div class="speaker__item speaker-3">
 				<a href="#TODO"><span class="speakers-list__name">Adam Pečev</span></a>
