--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				</li>
 			</ul>
 			<span class="hero__date">1. 3. - 1. 5. 2021</span>
-			<a class="btn btn-large registration-click" href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank">Přihlásit se</a>
+			<!-- <a class="btn btn-large registration-click" href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank">Přihlásit se</a> -->
 			<ul class="hero__social">
 				<li><a href="https://www.linkedin.com/company/44243/" target="_blank">
 					<svg height="24" viewBox="0 0 24.56 23.52" width="25" xmlns="http://www.w3.org/2000/svg">
@@ -180,19 +180,16 @@
 				<div class="col-lg-7">
 					<h2>O akademii</h2>
 					<p>V současné době se pečlivě připravujeme na spuštění třetího ročníku Mobile Academy, tedy
-						uceleného kurzu mobilního vývoje pořádaného firmou Etnetera a. s. Do kurzu se již nyní můžeš <strong><a
-								href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank">
-							přihlásit</a></strong> a vybrat si mezi dvěma fakultami. V případě <strong>iOS
-							fakulty</strong> se těš na programovací jazyk Swift a pokud máš radši zeleného robota, budeš
-						se cítit dobře na <strong>Android fakultě</strong> s Kotlinem.</p>
+						uceleného kurzu mobilního vývoje pořádaného firmou Etnetera a. s.. Registrace zájemců do akademie, 
+					které probíhaly od 1.12.2020 do 31.1.2021, jsou již ukončeny. Nyní probíhá výběr účastníků z registrovaných 
+					a samotná akademie.</p>
 					<p>První dva ročníky jsme se setkávali každou sobotu osobně se všemi účastníky kurzu. Tentokrát však
-						kvůli vládním opatřením, která mohou platit i na jaře, povedeme <strong>kurz online</strong> ve
+						kvůli vládním opatřením povedeme <strong>kurz online</strong> ve
 						stejném rozsahu. Pokud to ale bude možné, jsme připraveni i na klasickou variantu v našich
 						kancelářích!</p>
 					<p>Můžeš se těšit na mentory přímo z oboru, kteří se vývoji mobilních aplikací věnují dlouhodobě a
 						budou ti k dispozici každý den, aby odpověděli na tvé zvídavé dotazy. <strong>Po jejich boku
 							vypiluješ své dovednosti na cvičných projektech a příkladech z praxe</strong>.</p>
-					<p>Přihlášky do Akademie zasílejte do 30. ledna 2021.</p>
 					<ul class="accordion">
 						<li class="accordion__item active">
 							<div class="accordion__title forwho-click">
@@ -208,7 +205,7 @@
 								Jak vybíráme budoucí studenty?
 							</div>
 							<div class="accordion__content">
-								<p>Uchazeči mají čas se přihlásit do 30. ledna 2021. Na základě přijatých přihlášek
+								<p>Uchazeči měly čas se přihlásit do 31. ledna 2021. Na základě přijatých přihlášek
 									následně pozveme několik desítek uchazečů k pohovoru. Z nich poté vybereme budoucí
 									studenty, kteří absolvují celý kurz.</p>
 							</div>
@@ -227,7 +224,7 @@
 								Jak akademie probíhá?
 							</div>
 							<div class="accordion__content">
-								<p>Studium ti zabere 8 týdnů (od 6. března do 1. května 2021), z čehož máš jeden týden
+								<p>Studium ti zabere 8 týdnů (od 13. března do 1. května 2021), z čehož máš jeden týden
 									volný na samostudium. Každou sobotu tě tak čeká celodenní online workshop, během
 									kterého se dozvíš vše podstatné. Studium ti ale nezabere jen jeden den. I přes týden
 									budeš mít úkoly, které vypracuješ na další část workshopu.</p>
@@ -562,8 +559,8 @@
         <div class="container">
             <h2 class="center">Harmonogram</h2>
             <div class="text-center">
-                <a href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank" class="btn btn-large registration-click">Přihlásit
-                    se</a>
+                <!-- <a href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank" class="btn btn-large registration-click">Přihlásit
+                    se</a> -->
             </div>
             <div class="row">
                 <div class="col-xl-13 col-xl-offset-1">
@@ -626,9 +623,9 @@
 		</div>
 	</section>
 
-	<a class="footer footer__link registration-click" href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank">
+	<!-- <a class="footer footer__link registration-click" href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank">
 		<span class="btn btn-large">Přihlásit se</span>
-	</a>
+	</a> -->
 
 </div>
 <script src="dist/js/main.min.js" type="text/javascript"></script>
