--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="#ff5858" name="theme-color"/>
-	<title>Etnetera Mobile Academy 2021</title>
+	<title>Etnetera Mobile Academy 2022</title>
 
 	<link href="dist/css/style.min.css" rel="stylesheet">
 
@@ -85,7 +85,7 @@
 	<header class="header">
 		<div class="container">
 
-			<a class="logo" href="/" title="Etnetera Mobile Academy 2021"><img alt="" src="dist/img/logo.svg"></a>
+			<a class="logo" href="/" title="Etnetera Mobile Academy 2022"><img alt="" src="dist/img/logo.svg"></a>
 
 			<nav class="nav">
 				<ul>
@@ -96,7 +96,7 @@
 					<li><a href="#harmonogram">Harmonogram</a></li>
 					<li><a href="#contact">Kontakt</a></li>
 				</ul>
-				<!-- <a href="https://forms.gle/LuadJjW17VdZ5RJw5" target="_blank" class="btn btn--small registration-click">Přihlásit se</a> -->
+				<a href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank" class="btn btn--small registration-click">Přihlásit se</a>
 			</nav>
 
 			<div class="menu-toggle">
@@ -108,7 +108,7 @@
 
 	<section class="hero" id="hero">
 		<div class="hero__content">
-			<h1 class="center"><span>ETNETERA</span> MOBILE ACADEMY 2021</h1>
+			<h1 class="center"><span>ETNETERA</span> MOBILE ACADEMY 2022</h1>
 			<ul class="hero__social" style="margin-bottom: 40px">
 				<li>
 					<svg viewBox="0 0 512 512" width="40" xmlns="http://www.w3.org/2000/svg">
@@ -121,8 +121,8 @@
 					</svg>
 				</li>
 			</ul>
-			<span class="hero__date">1. 3. - 1. 5. 2021</span>
-			<!-- <a class="btn btn-large registration-click" href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank">Přihlásit se</a> -->
+			<span class="hero__date">březen - duben</span>
+			<a class="btn btn-large registration-click" href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank">Přihlásit se</a>
 			<ul class="hero__social">
 				<li><a href="https://www.linkedin.com/company/44243/" target="_blank">
 					<svg height="24" viewBox="0 0 24.56 23.52" width="25" xmlns="http://www.w3.org/2000/svg">
@@ -179,25 +179,23 @@
 			<div class="row">
 				<div class="col-lg-7">
 					<h2>O akademii</h2>
-					<p>V současné době se pečlivě připravujeme na spuštění třetího ročníku Mobile Academy, tedy
-						uceleného kurzu mobilního vývoje pořádaného firmou Etnetera a. s.. Registrace zájemců do akademie, 
-					které probíhaly od 1.12.2020 do 31.1.2021, jsou již ukončeny. Nyní probíhá výběr účastníků z registrovaných 
-					a samotná akademie.</p>
-					<p>První dva ročníky jsme se setkávali každou sobotu osobně se všemi účastníky kurzu. Tentokrát však
-						kvůli vládním opatřením povedeme <strong>kurz online</strong> ve
-						stejném rozsahu. Pokud to ale bude možné, jsme připraveni i na klasickou variantu v našich
-						kancelářích!</p>
-					<p>Můžeš se těšit na mentory přímo z oboru, kteří se vývoji mobilních aplikací věnují dlouhodobě a
-						budou ti k dispozici každý den, aby odpověděli na tvé zvídavé dotazy. <strong>Po jejich boku
-							vypiluješ své dovednosti na cvičných projektech a příkladech z praxe</strong>.</p>
+					<p>V současné době se pečlivě připravujeme na spuštění čtvrtého ročníku Mobile Academy, tedy
+						uceleného kurzu mobilního vývoje pořádaného firmou Etnetera a. s..  Zájemci o kurz se mohou registrovat 
+						do 31. 1. 2022. Po ukončení registrací proběhne výběr účastníků a samotná Akademie.</p>
+					<p>První dva ročníky jsme se setkávali každou sobotu osobně se všemi účastníky kurzu. Do třetího 
+						se nám ale vkradl covid, proto jsme museli volit online variantu. Tentokrát ale doufáme, 
+						že budeme mít možnost opět se sejít v našich kancelářích v&nbsp;pražských Holešovicích.</p>
+					<p>Každopádně se můžeš těšit na mentory přímo z&nbsp;oboru, kteří se vývoji mobilních aplikací 
+						věnují dlouhodobě a budou ti k&nbsp;dispozici každý den, aby odpověděli na tvé zvídavé dotazy. 
+						<strong>Po jejich boku vypiluješ své dovednosti na cvičných projektech a příkladech z&nbsp;praxe</strong>.</p>
 					<ul class="accordion">
 						<li class="accordion__item active">
 							<div class="accordion__title forwho-click">
 								Pro koho je akademie určena?
 							</div>
 							<div class="accordion__content" style="display: block;">
-								<p>Akademie je určena pro každého, kdo se chce naučit nebo zdokonalit své dovednosti v
-									oblasti mobilního vývoje na platformách iOS a Android.</p>
+								<p>Akademie je určena pro každého, kdo se chce naučit nebo zdokonalit své dovednosti 
+								v&nbsp;oblasti mobilního vývoje na platformách iOS a Android.</p>
 							</div>
 						</li>
 						<li class="accordion__item">
@@ -205,8 +203,8 @@
 								Jak vybíráme budoucí studenty?
 							</div>
 							<div class="accordion__content">
-								<p>Uchazeči měly čas se přihlásit do 31. ledna 2021. Na základě přijatých přihlášek
-									následně pozveme několik desítek uchazečů k pohovoru. Z nich poté vybereme budoucí
+								<p>Uchazeči mají čas se přihlásit do 31. ledna 2022. Na základě přijatých přihlášek
+									následně pozveme několik desítek uchazečů k pohovoru. Z&nbsp;nich poté vybereme budoucí
 									studenty, kteří absolvují celý kurz.</p>
 							</div>
 						</li>
@@ -224,10 +222,13 @@
 								Jak akademie probíhá?
 							</div>
 							<div class="accordion__content">
-								<p>Studium ti zabere 8 týdnů (od 13. března do 1. května 2021), z čehož máš jeden týden
+								<p>Studium ti zabere 8 týdnů, z&nbsp;čehož máš jeden týden
 									volný na samostudium. Každou sobotu tě tak čeká celodenní online workshop, během
 									kterého se dozvíš vše podstatné. Studium ti ale nezabere jen jeden den. I přes týden
 									budeš mít úkoly, které vypracuješ na další část workshopu.</p>
+								<p>Budeme se snažit, abychom mohli uskutečnit Akademii u nás v pražských kancelářích. 
+									Je však možné, že kvůli pandemických opatřením budeme nuceni přejít na online variantu 
+									jako v&nbsp;minulém ročníku.</p>
 							</div>
 						</li>
 						<li class="accordion__item">
@@ -304,8 +305,8 @@
 				<div class="col-md-11 col-lg-7 col-md-offset-2 col-lg-offset-4">
 					<div class="text-center">
 						<h2 class="center">Co získáš</h2>
-						<p>Úspěšným absolvováním akademie získáš kvalitní základ pro kariéru mobilního vývojáře. V
-							případě oboustranné spokojenosti ji můžeš nastartovat rovnou u nás v Etneteře.</p>
+						<p>Úspěšným absolvováním akademie získáš kvalitní základ pro kariéru mobilního vývojáře. 
+						V&nbsp;případě oboustranné spokojenosti ji můžeš nastartovat rovnou u nás v&nbsp;Etneteře.</p>
 					</div>
 				</div>
 			</div>
@@ -397,7 +398,7 @@
 		<div class="container">
 			<h2 class="big">Mentoři iOS</h2>
 			<div class="speakers-carousel">
-				<div class="speakers-carousel__item">
+				<!-- <div class="speakers-carousel__item">
 					<div class="row">
 						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
 							<img alt="" src="dist/img/speakers/urban_petr.jpg">
@@ -441,7 +442,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="speakers-carousel__item">
 					<div class="row">
 						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
@@ -477,9 +478,9 @@
 			</div>
 		</div>
 		<div class="speakers-list">
-			<div class="speaker__item speaker-1">
+			<!-- <div class="speaker__item speaker-1">
 				<a href="#TODO"><span class="speakers-list__name">Petr Urban</span></a>
-			</div>
+			</div> -->
 			<div class="speaker__item speaker-2">
 				<a href="#TODO"><span class="speakers-list__name">Miroslav Beleš</span></a>
 			</div>
@@ -504,7 +505,7 @@
 									<span class="speakers__position">Android Developer</span>
 									Radek Bien
 								</h3>
-								<p>Radek během své kariéry vystřídal několik technologií od back-end vývoje v Javě, přes front-end v technologii Flash/Flex či klasickém html+css+javascript. Nakonec zakotvil u mobilního vývoje, kde se mu nejlépe protíná záliba v uživatelských rozhraních a softwarovém inženýrství. Kromě toho je také velký nadšenec do Kotlin multiplatform a Kotlin native.</p>
+								<p>Radek během své kariéry vystřídal několik technologií od back-end vývoje v Javě, přes front-end v&nbsp;technologii Flash/Flex či klasickém html+css+javascript. Nakonec zakotvil u mobilního vývoje, kde se mu nejlépe protíná záliba v uživatelských rozhraních a softwarovém inženýrství. Kromě toho je také velký nadšenec do Kotlin multiplatform a Kotlin native.</p>
 							</div>
 						</div>
 					</div>
@@ -520,7 +521,7 @@
 									<span class="speakers__position">Android Developer</span>
 									Boris Valentovič
 								</h3>
-								<p>Boris  s vývojem mobilních aplikací začal jako student na vysoké škole. Po jejím vystudování si dal od vývoje pauzu, protože dva roky strávil cestováním po Severní Americe a Novém Zélandu. Jeho vášeň se ale ani tak nedala uhasit, takže se nakonec připojil do našich řad v Etneteře a rozhodl se své zkušenosti předat dál.</p>
+								<p>Boris s&nbsp;vývojem mobilních aplikací začal jako student na vysoké škole. Po jejím vystudování si dal od vývoje pauzu, protože dva roky strávil cestováním po Severní Americe a Novém Zélandu. Jeho vášeň se ale ani tak nedala uhasit, takže se nakonec připojil do našich řad v Etneteře a rozhodl se své zkušenosti předat dál.</p>
 							</div>
 						</div>
 					</div>
@@ -536,7 +537,7 @@
 									<span class="speakers__position">Android Developer</span>
 									Oleksandr Balan
 								</h3>
-								<p>Cesta Alexe začala na Fakultě informačních technologií ČVUT, kde si zkusil programování pro iOS i pro Android. Nakonec ho učaroval Android v rámci kterého už získával pracovní zkušenosti během studia. Ostatně, Oleksandr je velký nadšenec Kotlinu a Android světa. V Etneteře se Oleksandr podílel na vývoji aplikací pro O2, Rossmann nebo ČSOB.</p>
+								<p>Cesta Alexe začala na Fakultě informačních technologií ČVUT, kde si zkusil programování pro iOS i pro Android. Nakonec ho učaroval Android v&nbsp;rámci kterého už získával pracovní zkušenosti během studia. Ostatně, Oleksandr je velký nadšenec Kotlinu a Android světa. V&nbsp;Etneteře se Oleksandr podílel na vývoji aplikací pro O2, Rossmann nebo ČSOB.</p>
 							</div>
 						</div>
 					</div>
@@ -559,35 +560,35 @@
         <div class="container">
             <h2 class="center">Harmonogram</h2>
             <div class="text-center">
-                <!-- <a href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank" class="btn btn-large registration-click">Přihlásit
-                    se</a> -->
+                <a href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank" class="btn btn-large registration-click">Přihlásit
+                    se</a>
             </div>
             <div class="row">
                 <div class="col-xl-13 col-xl-offset-1">
                     <ul class="harmonogram__list">
                         <li>
                             <span class="harmonogram__title">REGISTRACE</span>
-                            <span class="harmonogram__number"><strong>PROSINEC</strong> 2020</span>
+                            <span class="harmonogram__number"><strong>PROSINEC</strong> 2021</span>
                         </li>
                         <li>
                             <span class="harmonogram__title">UKONČENÍ REGISTRACE</span>
-                            <span class="harmonogram__number"><strong>31. 1.</strong> 2021</span>
+                            <span class="harmonogram__number"><strong>31. 1.</strong> 2022</span>
                         </li>
                         <li>
                             <span class="harmonogram__title">VÝBĚR STUDENTŮ</span>
-                            <span class="harmonogram__number"><strong>ÚNOR</strong> 2021</span>
+                            <span class="harmonogram__number"><strong>ÚNOR</strong> 2022</span>
                         </li>
                         <li>
-                            <span class="harmonogram__title">START AKADEMIE</span>
-                            <span class="harmonogram__number"><strong>13. 3.</strong> 2021</span>
+                            <span class="harmonogram__title">START AKADEMIE</span> 
+                            <span class="harmonogram__number"><strong>BŘEZEN</strong> 2022</span>
                         </li>
                         <li>
                             <span class="harmonogram__title">PRŮBĚH AKADEMIE</span>
-                            <span class="harmonogram__number"><strong>BŘEZEN - DUBEN</strong> 2021</span>
+                            <span class="harmonogram__number"><strong>BŘEZEN - DUBEN</strong> 2022</span>
                         </li>
                         <li>
                             <span class="harmonogram__title">PROMOCE</span>
-                            <span class="harmonogram__number"><strong>KVĚTEN</strong> 2021</span>
+                            <span class="harmonogram__number"><strong>KVĚTEN</strong> 2022</span>
                         </li>
                     </ul>
                 </div>
@@ -623,9 +624,9 @@
 		</div>
 	</section>
 
-	<!-- <a class="footer footer__link registration-click" href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank">
+	<a class="footer footer__link registration-click" href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank">
 		<span class="btn btn-large">Přihlásit se</span>
-	</a> -->
+	</a>
 
 </div>
 <script src="dist/js/main.min.js" type="text/javascript"></script>
