Fixed quotation (master)

--- a/index.html
+++ b/index.html
@@ -470,7 +470,9 @@
 									<span class="speakers__position">iOS Developer</span>
 									Adam Pečev
 								</h3>
-								<p>Adam se přihlásil a úspěšně absolvoval první běh Mobile academy v roce 2018. Protože se mu zalíbil Swift a mobilní vývoj, přijal nabídku a hned po dokončení školy nastoupil do Etnetery jako iOS vývojář. Mobilní vývoj ale není jediná Adamova vášeň - už na výšce ho zaujaly kryptoměny, které se nakonec staly i tématem jeho diplomky. Zajímá se ale také o „softovější” části vývoje, především o UX a projektové řízení.</p>
+								<p>Adam se přihlásil a úspěšně absolvoval první běh Mobile academy v roce 2018. Protože se mu zalíbil Swift a mobilní vývoj, přijal nabídku a hned po dokončení školy nastoupil do 
+							  Etnetery jako iOS vývojář. Mobilní vývoj ale není jediná Adamova vášeň - už na výšce ho zaujaly kryptoměny, které se nakonec staly i tématem jeho diplomky. Zajímá se ale také o 
+								&bdquo;softovější&ldquo; části vývoje, především o UX a projektové řízení.</p>
 							</div>
 						</div>
 					</div>
