--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<li><a href="#harmonogram">Harmonogram</a></li>
 					<li><a href="#contact">Kontakt</a></li>
 				</ul>
-				<a href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank" class="btn btn--small registration-click">Přihlásit se</a>
+				<!-- <a href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank" class="btn btn--small registration-click">Přihlásit se</a> -->
 			</nav>
 
 			<div class="menu-toggle">
@@ -471,8 +471,8 @@
 									Adam Pečev
 								</h3>
 								<p>Adam se přihlásil a úspěšně absolvoval první běh Mobile academy v roce 2018. Protože se mu zalíbil Swift a mobilní vývoj, přijal nabídku a hned po dokončení školy nastoupil do 
-							  Etnetery jako iOS vývojář. Mobilní vývoj ale není jediná Adamova vášeň - už na výšce ho zaujaly kryptoměny, které se nakonec staly i tématem jeho diplomky. Zajímá se ale také o 
-								&bdquo;softovější&ldquo; části vývoje, především o UX a projektové řízení.</p>
+							  	Etnetery jako iOS vývojář. Mobilní vývoj ale není jediná Adamova vášeň - už na výšce ho zaujaly kryptoměny, které se nakonec staly i tématem jeho diplomky. Zajímá se ale také o
+								softovější části vývoje, především o UX a projektové řízení.</p>
 							</div>
 						</div>
 					</div>
