Added Marek (master)

--- a/index.html
+++ b/index.html
@@ -398,51 +398,6 @@
 		<div class="container">
 			<h2 class="big">Mentoři iOS</h2>
 			<div class="speakers-carousel">
-				<!-- <div class="speakers-carousel__item">
-					<div class="row">
-						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
-							<img alt="" src="dist/img/speakers/urban_petr.jpg">
-						</div>
-						<div class="speakers__wrapper col-md-15 col-lg-10">
-							<div class="speakers__content">
-								<h3>
-									<span class="speakers__position">Lead iOS Developer</span>
-									Petr Urban
-								</h3>
-								<p>Petr naskočil do zákulisí světa mobilních aplikací v roce 2012. Dlouho se věnoval
-									převážně platformě Android, psal backendy v PHP a navrhoval uživatelská rozhraní na
-									míru. Spolu s hromadou zkušeností <strong>nasbíral statisíce stažení</strong> na
-									několika vlastních aplikacích.</p>
-								<p>V roce 2016 se chopil příležitosti táhnout s námi za jeden provaz. Postupně se
-									zakoukal do <strong>atraktivního jazyka Swift</strong> a přešel na platformu iOS.
-								</p>
-								<p>Dnes mnoho času věnuje také UX, díky čemuž nemůže chybět na žádném novém projektu
-									jakožto <strong>UX designer</strong>.</p>
-								<ul class="speakers__social">
-									<li><a href="https://www.linkedin.com/in/petr-urban-2abba175/" target="_blank">
-										<svg height="20px" viewBox="0 0 24.56 23.52" width="21px"
-											 xmlns="http://www.w3.org/2000/svg">
-											<defs>
-												<style>.cls-1 {
-                                                    fill: #aaa;
-                                                }</style>
-											</defs>
-											<title>Datový zdroj 1</title>
-											<g data-name="Vrstva 2" id="Vrstva_2">
-												<g data-name="Vrstva 1" id="Vrstva_1-2">
-													<path class="cls-1"
-														  d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"
-														  data-name="icon linkedin"
-														  id="icon_linkedin"/>
-												</g>
-											</g>
-										</svg>
-									</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div> -->
 				<div class="speakers-carousel__item">
 					<div class="row">
 						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
@@ -477,17 +432,56 @@
 						</div>
 					</div>
 				</div>
+				<div class="speakers-carousel__item">
+					<div class="row">
+						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
+							<img alt="" src="dist/img/speakers/marek-stovicek.jpg">
+						</div>
+						<div class="speakers__wrapper col-md-15 col-lg-10">
+							<div class="speakers__content">
+								<h3>
+									<span class="speakers__position">iOS Developer</span>
+									Marek Šťovíček
+								</h3>
+								<p>Marek se dostal k mobilnímu vývoji v&nbsp;roce 2018, kdy se začal učit Swift na svém prvním komerčním projektu. 
+									Mobilní vývoj ho velmi zaujal a k&nbsp;jeho velké radosti dostal příležitost tvořit a zlepšovat aplikace v&nbsp;Etneteře.
+									Kromě mobilního vývoje rád zkouší nové věci a sporty.</p>
+								<!-- <ul class="speakers__social">
+									<li><a href="https://www.linkedin.com/in/petr-urban-2abba175/" target="_blank">
+										<svg height="20px" viewBox="0 0 24.56 23.52" width="21px"
+											 xmlns="http://www.w3.org/2000/svg">
+											<defs>
+												<style>.cls-1 {
+                                                    fill: #aaa;
+                                                }</style>
+											</defs>
+											<title>Datový zdroj 1</title>
+											<g data-name="Vrstva 2" id="Vrstva_2">
+												<g data-name="Vrstva 1" id="Vrstva_1-2">
+													<path class="cls-1"
+														  d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"
+														  data-name="icon linkedin"
+														  id="icon_linkedin"/>
+												</g>
+											</g>
+										</svg>
+									</a></li>
+								</ul> -->
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="speakers-list">
-			<!-- <div class="speaker__item speaker-1">
-				<a href="#TODO"><span class="speakers-list__name">Petr Urban</span></a>
-			</div> -->
 			<div class="speaker__item speaker-2">
 				<a href="#TODO"><span class="speakers-list__name">Miroslav Beleš</span></a>
 			</div>
 			<div class="speaker__item speaker-3">
 				<a href="#TODO"><span class="speakers-list__name">Adam Pečev</span></a>
+			</div>
+			<div class="speaker__item speaker-1">
+				<a href="#TODO"><span class="speakers-list__name">Marek Šťovíček</span></a>
 			</div>
 		</div>
 	</section>
