Academy moved to autumn (master)

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					</svg>
 				</li>
 			</ul>
-			<span class="hero__date">březen - duben</span>
+			<span class="hero__date">říjen - listopad</span>
 			<a class="btn btn-large registration-click" href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank">Přihlásit se</a>
 			<ul class="hero__social">
 				<li><a href="https://www.linkedin.com/company/44243/" target="_blank">
@@ -181,7 +181,7 @@
 					<h2>O akademii</h2>
 					<p>V současné době se pečlivě připravujeme na spuštění čtvrtého ročníku Mobile Academy, tedy
 						uceleného kurzu mobilního vývoje pořádaného firmou Etnetera a. s..  Zájemci o kurz se mohou registrovat 
-						do 31. 1. 2022. Po ukončení registrací proběhne výběr účastníků a samotná Akademie.</p>
+						do 28. 8. 2022. Po ukončení registrací proběhne výběr účastníků a samotná Akademie.</p>
 					<p>První dva ročníky jsme se setkávali každou sobotu osobně se všemi účastníky kurzu. Do třetího 
 						se nám ale vkradl covid, proto jsme museli volit online variantu. Tentokrát ale doufáme, 
 						že budeme mít možnost opět se sejít v našich kancelářích v&nbsp;pražských Holešovicích.</p>
@@ -203,7 +203,7 @@
 								Jak vybíráme budoucí studenty?
 							</div>
 							<div class="accordion__content">
-								<p>Uchazeči mají čas se přihlásit do 31. ledna 2022. Na základě přijatých přihlášek
+								<p>Uchazeči mají čas se přihlásit do 28. srpna 2022. Na základě přijatých přihlášek
 									následně pozveme několik desítek uchazečů k pohovoru. Z&nbsp;nich poté vybereme budoucí
 									studenty, kteří absolvují celý kurz.</p>
 							</div>
@@ -564,27 +564,27 @@
                     <ul class="harmonogram__list">
                         <li>
                             <span class="harmonogram__title">REGISTRACE</span>
-                            <span class="harmonogram__number"><strong>PROSINEC</strong> 2021</span>
+                            <span class="harmonogram__number"><strong>PROBÍHÁ</strong></span>
                         </li>
                         <li>
                             <span class="harmonogram__title">UKONČENÍ REGISTRACE</span>
-                            <span class="harmonogram__number"><strong>31. 1.</strong> 2022</span>
+                            <span class="harmonogram__number"><strong>28. 8.</strong> 2022</span>
                         </li>
                         <li>
                             <span class="harmonogram__title">VÝBĚR STUDENTŮ</span>
-                            <span class="harmonogram__number"><strong>ÚNOR</strong> 2022</span>
+                            <span class="harmonogram__number"><strong>ZÁŘÍ</strong> 2022</span>
                         </li>
                         <li>
                             <span class="harmonogram__title">START AKADEMIE</span> 
-                            <span class="harmonogram__number"><strong>BŘEZEN</strong> 2022</span>
+                            <span class="harmonogram__number"><strong>ŘÍJEN</strong> 2022</span>
                         </li>
                         <li>
                             <span class="harmonogram__title">PRŮBĚH AKADEMIE</span>
-                            <span class="harmonogram__number"><strong>BŘEZEN - DUBEN</strong> 2022</span>
+                            <span class="harmonogram__number"><strong>ŘÍJEN - LISTOPAD</strong> 2022</span>
                         </li>
                         <li>
                             <span class="harmonogram__title">PROMOCE</span>
-                            <span class="harmonogram__number"><strong>KVĚTEN</strong> 2022</span>
+                            <span class="harmonogram__number"><strong>PROSINEC</strong> 2022</span>
                         </li>
                     </ul>
                 </div>
@@ -597,22 +597,24 @@
 			<div class="row">
 				<div class="col col-md-12 col-lg-9">
 					<h2 class="center">Kontakt</h2>
-					<h3>Etnetera a.s.</h3>
-					<ul class="contact-list">
-						<li>
-							<span class="contact__icon"><img alt="" src="dist/img/icon-phone-2.svg"></span>
-							+420 233 326 810
-						</li>
-						<li>
-							<span class="contact__icon"><img alt="" src="dist/img/icon-place.svg"></span>
-							Jankovcova 1037/49<br>
-							170 00 Praha 7
-						</li>
-						<li>
-							<span class="contact__icon"><img alt="" src="dist/img/icon-mail.svg"></span>
-							<a href="mailto:info@mobileacademy.cz">info@mobileacademy.cz</a>
-						</li>
-					</ul>
+					<h3 class="center">Etnetera a.s.</h3>
+					<div class="center">
+						<ul class="contact-list">
+							<li>
+								<span class="contact__icon"><img alt="" src="dist/img/icon-phone-2.svg"></span>
+								+420 233 326 810
+							</li>
+							<li>
+								<span class="contact__icon"><img alt="" src="dist/img/icon-place.svg"></span>
+								Jankovcova 1037/49<br>
+								170 00 Praha 7
+							</li>
+							<li>
+								<span class="contact__icon"><img alt="" src="dist/img/icon-mail.svg"></span>
+								<a href="mailto:info@mobileacademy.cz">info@mobileacademy.cz</a>
+							</li>
+						</ul>
+					</div>
 					<a class="btn" href="https://goo.gl/maps/wxBVUF84iWR2" rel="noopener" target="_blank">Podívejte se
 						na mapu</a>
 				</div>
