Added Tuans and Jiri photos (master)

--- a/index.html
+++ b/index.html
@@ -417,13 +417,13 @@
 				<div class="speakers-carousel__item">
 					<div class="row">
 						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
-							<img alt="" src="dist/img/speakers/pecev_adam.jpg">
+							<img alt="" src="dist/img/speakers/tuantu_do.jpg">
 						</div>
 						<div class="speakers__wrapper col-md-15 col-lg-10">
 							<div class="speakers__content">
 								<h3>
 									<span class="speakers__position">iOS Developer</span>
-									Adam Pečev
+									Tuan Tu Do
 								</h3>
 								<p>Adam se přihlásil a úspěšně absolvoval první běh Mobile academy v roce 2018. Protože se mu zalíbil Swift a mobilní vývoj, přijal nabídku a hned po dokončení školy nastoupil do 
 							  	Etnetery jako iOS vývojář. Mobilní vývoj ale není jediná Adamova vášeň - už na výšce ho zaujaly kryptoměny, které se nakonec staly i tématem jeho diplomky. Zajímá se ale také o
@@ -435,13 +435,13 @@
 				<div class="speakers-carousel__item">
 					<div class="row">
 						<div class="col-xs-15 col-md-8  col-sm-offset-0 col-lg-5 speakers-carousel__img">
-							<img alt="" src="dist/img/speakers/marek-stovicek.jpg">
+							<img alt="" src="dist/img/speakers/zoudun.jpg">
 						</div>
 						<div class="speakers__wrapper col-md-15 col-lg-10">
 							<div class="speakers__content">
 								<h3>
 									<span class="speakers__position">iOS Developer</span>
-									Marek Šťovíček
+									Jiří zoudun
 								</h3>
 								<p>Marek se dostal k mobilnímu vývoji v&nbsp;roce 2018, kdy se začal učit Swift na svém prvním komerčním projektu. 
 									Mobilní vývoj ho velmi zaujal a k&nbsp;jeho velké radosti dostal příležitost tvořit a zlepšovat aplikace v&nbsp;Etneteře.
@@ -478,10 +478,10 @@
 				<a href="#TODO"><span class="speakers-list__name">Miroslav Beleš</span></a>
 			</div>
 			<div class="speaker__item speaker-3">
-				<a href="#TODO"><span class="speakers-list__name">Adam Pečev</span></a>
+				<a href="#TODO"><span class="speakers-list__name">Tuan Tu Do</span></a>
 			</div>
 			<div class="speaker__item speaker-1">
-				<a href="#TODO"><span class="speakers-list__name">Marek Šťovíček</span></a>
+				<a href="#TODO"><span class="speakers-list__name">Jiří Zoudun</span></a>
 			</div>
 		</div>
 	</section>
