Text in bio (master)

--- a/index.html
+++ b/index.html
@@ -425,9 +425,10 @@
 									<span class="speakers__position">iOS Developer</span>
 									Tuan Tu Do
 								</h3>
-								<p>Adam se přihlásil a úspěšně absolvoval první běh Mobile academy v roce 2018. Protože se mu zalíbil Swift a mobilní vývoj, přijal nabídku a hned po dokončení školy nastoupil do 
-							  	Etnetery jako iOS vývojář. Mobilní vývoj ale není jediná Adamova vášeň - už na výšce ho zaujaly kryptoměny, které se nakonec staly i tématem jeho diplomky. Zajímá se ale také o
-								softovější části vývoje, především o UX a projektové řízení.</p>
+								<p>Tuan úspěšně absolvoval první běh Mobile Academy v roce 2018. Protože se mu Swift a vývoj 
+									aplikací na Apple zařízení zalíbil, pokračoval svoji cestu v Apple Developer Academy v Neapoli, 
+									odkud se pak s nabytými znalostmi vrátil do Etnetery. U dalších ročníků Mobile Academy už jste mohli 
+									Tuana poznat jako mentora. Zajímá se také o další části vývoje aplikací jako je UI a produktové řízení.</p>
 							</div>
 						</div>
 					</div>
@@ -440,12 +441,19 @@
 						<div class="speakers__wrapper col-md-15 col-lg-10">
 							<div class="speakers__content">
 								<h3>
-									<span class="speakers__position">iOS Developer</span>
+									<span class="speakers__position">iOS Developer &amp; Team Leader</span>
 									Jiří zoudun
 								</h3>
-								<p>Marek se dostal k mobilnímu vývoji v&nbsp;roce 2018, kdy se začal učit Swift na svém prvním komerčním projektu. 
-									Mobilní vývoj ho velmi zaujal a k&nbsp;jeho velké radosti dostal příležitost tvořit a zlepšovat aplikace v&nbsp;Etneteře.
-									Kromě mobilního vývoje rád zkouší nové věci a sporty.</p>
+								<p>Jirka se vývojem mobilních aplikací začal zabývat již při studiu na vysoké škole,
+									kde vytvořil svou první appku v rámci bakalářské práce. Touto
+									aplikací vzbudil pozornost našeho HR oddělení a protože jsme si padli do oka, tak k
+									nám zanedlouho nastoupil.
+									Postupem času se začal zabývat AR/VR a multiplatformním mobilním
+									vývojem.
+									V roce 2017 si uvědomil, že ho táhnout i softovější činnosti. Proto se přihlásil do
+									<a href="https://www.etnetera.cz/blog/prima-volba-bez-lzi-a-populismu-existuje"
+									   style="color: #ff5858">voleb na pozici team leadera</a>, které
+									následně vyhrál.</p>
 								<!-- <ul class="speakers__social">
 									<li><a href="https://www.linkedin.com/in/petr-urban-2abba175/" target="_blank">
 										<svg height="20px" viewBox="0 0 24.56 23.52" width="21px"
