Added mentions about Kosice and icon. (master)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="#ff5858" name="theme-color"/>
 	<title>Etnetera Mobile Academy 2022</title>
+	<link rel="icon" type="image/x-icon" href="dist/img/icon.png">
 
 	<link href="dist/css/style.min.css" rel="stylesheet">
 
@@ -179,12 +180,12 @@
 			<div class="row">
 				<div class="col-lg-7">
 					<h2>O akademii</h2>
-					<p>V současné době se pečlivě připravujeme na spuštění čtvrtého ročníku Mobile Academy, tedy
-						uceleného kurzu mobilního vývoje pořádaného firmou Etnetera a. s..  Zájemci o kurz se mohou registrovat 
-						do 28. 8. 2022. Po ukončení registrací proběhne výběr účastníků a samotná Akademie.</p>
+					<p>V&nbsp;současné době se pečlivě připravujeme na spuštění čtvrtého ročníku Mobile Academy, tedy
+						uceleného kurzu mobilního vývoje pořádaného firmou Etnetera&nbsp;a.&nbsp;s..  Zájemci o kurz se mohou registrovat 
+						do 28.&nbsp;8.&nbsp;2022. Po ukončení registrací proběhne výběr účastníků a samotná Akademie.</p>
 					<p>První dva ročníky jsme se setkávali každou sobotu osobně se všemi účastníky kurzu. Do třetího 
-						se nám ale vkradl covid, proto jsme museli volit online variantu. Tentokrát ale doufáme, 
-						že budeme mít možnost opět se sejít v našich kancelářích v&nbsp;pražských Holešovicích.</p>
+						se nám ale vkradl covid, proto jsme museli volit online variantu. Letos bychom rádi využili toho 
+						nejlepšího z&nbsp;obou možností a propojili obě varianty. Mentory akademie budeme mít nejenom v&nbsp;Praze ale i ve slovenských Košicích.</p>
 					<p>Každopádně se můžeš těšit na mentory přímo z&nbsp;oboru, kteří se vývoji mobilních aplikací 
 						věnují dlouhodobě a budou ti k&nbsp;dispozici každý den, aby odpověděli na tvé zvídavé dotazy. 
 						<strong>Po jejich boku vypiluješ své dovednosti na cvičných projektech a příkladech z&nbsp;praxe</strong>.</p>
@@ -223,12 +224,14 @@
 							</div>
 							<div class="accordion__content">
 								<p>Studium ti zabere 8 týdnů, z&nbsp;čehož máš jeden týden
-									volný na samostudium. Každou sobotu tě tak čeká celodenní online workshop, během
+									volný na samostudium. Každou sobotu tě tak čeká celodenní workshop, během
 									kterého se dozvíš vše podstatné. Studium ti ale nezabere jen jeden den. I přes týden
 									budeš mít úkoly, které vypracuješ na další část workshopu.</p>
-								<p>Budeme se snažit, abychom mohli uskutečnit Akademii u nás v pražských kancelářích. 
-									Je však možné, že kvůli pandemických opatřením budeme nuceni přejít na online variantu 
-									jako v&nbsp;minulém ročníku.</p>
+								<p>Využijeme to nejlepší z&nbsp;online i offline ročníků akademie tak, 
+									abychom se mohli potkat osobně, ale zároveň umožnili účast i těm, 
+									kteří z různých důvodů potřebují studovat online. Sami mentoři navíc 
+									nebudou jen v&nbsp;Praze, ale i ve slovenských Košicích.
+								</p>
 							</div>
 						</li>
 						<li class="accordion__item">
