registration buttons removed (master)

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				</li>
 			</ul>
 			<span class="hero__date">říjen - listopad</span>
-			<a class="btn btn-large registration-click" href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank">Přihlásit se</a>
+			<!-- <a class="btn btn-large registration-click" href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank">Přihlásit se</a> -->
 			<ul class="hero__social">
 				<li><a href="https://www.linkedin.com/company/44243/" target="_blank">
 					<svg height="24" viewBox="0 0 24.56 23.52" width="25" xmlns="http://www.w3.org/2000/svg">
@@ -567,8 +567,8 @@
         <div class="container">
             <h2 class="center">Harmonogram</h2>
             <div class="text-center">
-                <a href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank" class="btn btn-large registration-click">Přihlásit
-                    se</a>
+                <!-- <a href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank" class="btn btn-large registration-click">Přihlásit -->
+                    <!-- se</a> -->
             </div>
             <div class="row">
                 <div class="col-xl-13 col-xl-offset-1">
@@ -633,9 +633,9 @@
 		</div>
 	</section>
 
-	<a class="footer footer__link registration-click" href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank">
+	<!-- <a class="footer footer__link registration-click" href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank">
 		<span class="btn btn-large">Přihlásit se</span>
-	</a>
+	</a> -->
 
 </div>
 <script src="dist/js/main.min.js" type="text/javascript"></script>
