Updated index with info about finished academy. (master)

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<li><a href="#harmonogram">Harmonogram</a></li>
 					<li><a href="#contact">Kontakt</a></li>
 				</ul>
-				<!-- <a href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank" class="btn btn--small registration-click">Přihlásit se</a> -->
+				<!-- <a href="https://forms.gle/w5iQ1LC5Vwp8zmdZ6" target="_blank" class="btn btn--small registration-click">Mám zájem</a> -->
 			</nav>
 
 			<div class="menu-toggle">
@@ -122,8 +122,9 @@
 					</svg>
 				</li>
 			</ul>
-			<span class="hero__date">říjen - listopad</span>
+			<!-- <span class="hero__date">říjen - listopad</span> -->
 			<!-- <a class="btn btn-large registration-click" href="https://forms.gle/FtBkzYyWQ2MiWVx48" target="_blank">Přihlásit se</a> -->
+			<a href="https://forms.gle/w5iQ1LC5Vwp8zmdZ6" target="_blank" class="btn btn-large registration-click">Mám zájem</a>
 			<ul class="hero__social">
 				<li><a href="https://www.linkedin.com/company/44243/" target="_blank">
 					<svg height="24" viewBox="0 0 24.56 23.52" width="25" xmlns="http://www.w3.org/2000/svg">
@@ -180,12 +181,10 @@
 			<div class="row">
 				<div class="col-lg-7">
 					<h2>O akademii</h2>
-					<p>V&nbsp;současné době se pečlivě připravujeme na spuštění čtvrtého ročníku Mobile Academy, tedy
-						uceleného kurzu mobilního vývoje pořádaného firmou Etnetera&nbsp;a.&nbsp;s..  Zájemci o kurz se mohou registrovat 
-						do 28.&nbsp;8.&nbsp;2022. Po ukončení registrací proběhne výběr účastníků a samotná Akademie.</p>
+					<p>Čtvrtý ročník mobilní akademie byl v&nbsp;prosinci úspěšně ukončen. V&nbsp;tuto chvíli další ročník akademie nepřipravujeme. Pokud ale máte o&nbsp;naši akademii zájem, přihlašte&nbsp;se do našeho waitlistu!</p>
 					<p>První dva ročníky jsme se setkávali každou sobotu osobně se všemi účastníky kurzu. Do třetího 
-						se nám ale vkradl covid, proto jsme museli volit online variantu. Letos bychom rádi využili toho 
-						nejlepšího z&nbsp;obou možností a propojili obě varianty. Mentory akademie budeme mít nejenom v&nbsp;Praze ale i ve slovenských Košicích.</p>
+						se nám ale vkradl covid, proto jsme museli volit online variantu. Letos jsme využili toho 
+						nejlepšího z&nbsp;obou možností a propojili obě varianty. Mentory akademie jsme měli nejen v&nbsp;Praze ale i ve slovenských Košicích.</p>
 					<p>Každopádně se můžeš těšit na mentory přímo z&nbsp;oboru, kteří se vývoji mobilních aplikací 
 						věnují dlouhodobě a budou ti k&nbsp;dispozici každý den, aby odpověděli na tvé zvídavé dotazy. 
 						<strong>Po jejich boku vypiluješ své dovednosti na cvičných projektech a příkladech z&nbsp;praxe</strong>.</p>
@@ -204,7 +203,7 @@
 								Jak vybíráme budoucí studenty?
 							</div>
 							<div class="accordion__content">
-								<p>Uchazeči mají čas se přihlásit do 28. srpna 2022. Na základě přijatých přihlášek
+								<p>Na základě přijatých přihlášek
 									následně pozveme několik desítek uchazečů k pohovoru. Z&nbsp;nich poté vybereme budoucí
 									studenty, kteří absolvují celý kurz.</p>
 							</div>
